# quubee

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CREDITS.md  LICENSE  LICENSE-MIT  README.md  TODO.md
db/: games.json
docs/: 30line_spec.md  audio_worker_migration.md  concept.md  deploy.md  dos_hle_gaps.md  hechima_handoff.md  hechima_session_handoff.md  hechima_v020_phase2_chord_feedback.md  keymap_engine_handoff.md  structure.md
emscripten/: build.sh
licenses/: README.md
licenses/fonts/: misaki-misakib8.txt  mplus-LICENSE_J.txt  nekosan-fontbmp-README2.txt
native/: CMakeLists.txt  bridge.c  bridge.h  compiler.h  compiler_base.h  dos_fep.c  dos_fep.h  dos_int21.c  dos_int21.h  dos_loader.c  dos_loader.h  dos_mouse33.c  dos_mouse33.h  dos_shell_blob.h  dos_xms.c  dos_xms.h  mousemng.h  np2.h  qb_commng.c  qb_guestmem.h  qb_ini.c  qb_joymng.c  qb_mousemng.c  qb_mousemng.h  qb_scrnmng.c  qb_soundmng.c  qb_soundmng.h  qb_sysmng.c  qb_taskmng.c  qb_timemng.c  qb_tsf.c  qb_vermouth.c  qb_wabrly.c  scrnmng.h
tools/: adpcm_beepgain_test.js  audio_rate_test.js  bat_debug.js  batch_done_test.js  batch_test.js  batscript_test.js  beep_gain_test.js  bench_frame.js  bench_game.js  bench_ray.js  bio100_triage.js  call_bat_test.js  com_memown_test.js  conwork_test.js  country_info_test.js  create_sjis_test.js  csi_priv_test.js  deploy.sh  dev_info_test.js  devserver.js  diskimage_test.js  esc_seq_test.js  exe_debug.js  exe_maxalloc_test.js  exec_env_test.js  exec_psp_test.js  exectest_run.js  faithful_gap_test.js  fd_filer_test.js  fep_layout_test.js  fep_mozc_test.js  fep_naginata_edit_test.js  fep_resize_test.js  fep_test.js  find_sjis_test.js  fmp_test.js  gdc_cursor_test.js  gen_keisen_glyphs.py  graph_mode_test.js  ime_inject_bios_test.js  (+56 more)
tools/bench_cpu/: bench_multiple.js  boot_busy.asm  build.sh  busy.d88  test_autoclock.js
tools/boot_hello/: boot.asm  make_d88.py
tools/dos_loader/: args.com.py  bin2h.py  boot.asm  build.sh  dostest.com.py  hello.com.py  hello.exe.py  make_d88.py  shell.asm  sjistest.com.py
tools/font_build/: README.md  package-lock.json  package.json
tools/lib/: machine.js  stage.js  tier.js
tools/mcp/: README.md  README.npm.md  make_package.js  package.json  server.js
tools/mousetest/: MOUSETEST.COM  README.md  measure_real.js  mousetest.asm
tools/np2kai_patches/: 01_dos_loader_hooks.patch  02_font_reset_fix.patch  03_rtc_y2k_clamp.patch  04_lio_gscreen_disp_page.patch  05_lio_gcircle_arc.patch  06_beep_gain.patch  07_cpu_mem_fastpath.patch  README.md
tools/pmd_build/: .gitignore  README.md  build_pmd.sh
tools/testdata/: README.md  boot.d88
tools/testdata/larc/: README.md
tools/vsync_test/: boot.asm  make_d88.py  vsync_test.d88
web/: _headers  index.html
web/assets/: hechima.d.ts  hechima.js  keymap-engine.js  loader.d88  np2kai_boot.d88
web/assets/keymaps/: azik_jis.json  azik_us.json  index.json  naginata_jis.json  naginata_us.json  nicola_jis.json  nicola_us.json  romaji_colemak_jis.json  romaji_colemak_us.json  romaji_jis.json  romaji_us.json  tsuki2-263_jis.json  tsuki2-263_us.json
web/assets/pmd/: PMD86.COM  PMP.COM
web/assets/rhythm/: PROVENANCE_2608modoki2.txt
web/player/: archive.js  audio-worklet.js  batscript.js  bridge.js  diskimage.js  emu-audio-worklet.js  emu-worker.js  fep.js  magimage.js  mozc-worker.js  piimage.js  pmdmeta.js
